--- a/pyproject.toml
+++ b/pyproject.toml
@@ -149,3 +149,11 @@ profile = "black"
 multi_line_output = 3
 line_length = 100
 known_first_party = ["ast_viewer"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.1.0",
+    "pytest-cov>=6.3.0",
+    "pytest-mock>=3.15.0",
+]
